force-app/main/default/objects/Supply_Pool__c/Supply_Pool__c.object-meta.xml
<CustomObject>
    <label>Supply Pool</label>
    <nameField>
        <label>Supply Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supply Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>