force-app/main/default/objects/Supply_Pool__c/fields/Capacity_Review_Applies__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Review_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capacity Review Applies</label>
    <type>Checkbox</type>
</CustomField>