force-app/main/default/objects/Supply_Pool__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date supply pool becomes inactive</description>
    <inlineHelpText>Date supply pool becomes inactive</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>