force-app/main/default/objects/Supply_Pool__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date supply pool becomes active</description>
    <inlineHelpText>Date supply pool becomes active</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>