force-app/main/default/objects/Supply_Pool__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Supply Pools</relationshipLabel>
    <relationshipName>Supply_Pools</relationshipName>
    <type>Lookup</type>
</CustomField>