force-app/main/default/objects/Supply_Pool__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Utility__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>